testdata/baselines/reference/submodule/conformance/checkJsdocTypedefOnlySourceFile.errors.txt
0.js(8,9): error TS2339: Property 'SomeName' does not exist on type '{}'.
0.js(10,12): error TS2503: Cannot find namespace 'exports'.


==== 0.js (2 errors) ====
    // @ts-check
    
    var exports = {};
    
    /**
     * @typedef {string}
     */
    exports.SomeName;
            ~~~~~~~~
!!! error TS2339: Property 'SomeName' does not exist on type '{}'.
    
    /** @type {exports.SomeName} */
               ~~~~~~~
!!! error TS2503: Cannot find namespace 'exports'.
    const myString = 'str';
    